# llm_from_scratch

./: Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
01_data/: data_loader.py  download_data.py  generate_synthetic.py
02_tokenization/: bpe_tokenizer.py
03_embeddings/: __init__.py  token_embedding.py
05_transformer/: feed_forward.py  gpt_model.py  layer_norm.py  transformer_block.py
06_training/: optimizer.py  train.py  trainer.py
07_inference/: beam_search.py  demo.py  generate.py
08_evaluation/: __init__.py  perplexity.py
09_fine_tuning/: __init__.py  fine_tune_runner.py
configs/: debug.yaml  medium.yaml  small.yaml
docs/: references.md
notebooks/: 01_explore_running_data.ipynb  02_build_tokenizer.ipynb  03_embeddings_from_scratch.ipynb  04_attention_visualization.ipynb  05_train_mini_gpt.ipynb  06_generate_run_logs.ipynb
step_01_data/: __init__.py  download_data.py  preprocessing.py
step_02_tokenization/: __init__.py  tokenizer.json  train_tokenizer.py
step_03_embeddings/: __init__.py  positional_encoding.py  visualize_embeddings.py
step_04_attention/: __init__.py  multi_head_attention.py  scaled_dot_product.py  visualize_attention.py
step_05_transformer/: __init__.py  gpt_model.py  transformer_block.py
step_06_training/: __init__.py  loss.py  train.py  trainer.py
step_07_inference/: __init__.py  demo.py
step_08_evaluation/: __init__.py  benchmark.py  bleu_score.py  perplexity.py
step_09_fine_tuning/: README.md  __init__.py  fine_tune_runner.py  lora.py
step_10_scaling/: README.md  __init__.py  scaling_laws.py
(+17 files in other folders)
